# pyfirebirdsqla

./: .pre-commit-config.yaml  Makefile  README.md  mypy.ini  pylint_dict.txt  pylintrc  setup.cfg  setup.py
firebirdsqla/: __init__.py  compat.py
src/firebirdsqla/: __init__.py  compat.py
