[metadata]
name = firebirdsqla
version = 1.6.1
author = Veha S
description = pyfirebirdsql shim for sqlachemy
long-description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/dand-oss/pyfirebirdsqla
classifiers =
    Development Status :: 4 - Beta
    Environment :: Console
    Intended Audience :: Developers

[options]
include_package_data = true
packages = firebirdsqla
python_requires = >=3.6
install_requires=
    firebirdsql

[options.package_data]
firebirdsqla = py.typed
