[metadata]
name = firebirdsqla
version = 1.4.0
author = Veha S
description = pyfirebirdsql shim for sqlachemy
long-description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/dand-oss/pyfirebirdsqla
classifiers =
    Development Status :: 4 - Beta
    Environment :: Console
    Intended Audience :: Developers

[options]
package_dir =
    =src
packages = find:
python_requires = >=3.6
install_requires=
    firebirdsql

[options.packages.find]
where=src
